<?xml version="1.0"?>
<package>
  <name>constrained_ik</name>
  <version>0.1.1</version>
  <description>Constraint-based IK solver.  Good for high-DOF robots or underconstrained tasks.</description>

  <author email="clewis@swri.org">Chris Lewis</author>
  <author email="jzoss@swri.org">Jeremy Zoss</author>
  <author email="dpsolomon@gmail.com">Dan Solomon</author>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <maintainer email="jzoss@swri.org">Jeremy Zoss, SwRI</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/constrained_ik</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>

  <build_depend>boost</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <moveit_core plugin="${prefix}/constrained_ik_plugin.xml"/>
      <moveit_core plugin="${prefix}/constrained_ik_planner_plugin_description.xml"/>
      <constrained_ik plugin="${prefix}/constrained_ik_constraint_plugin_description.xml"/>
      <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
