<?xml version="1.0"?>
<package format="2">
  <name>constrained_ik</name>
  <version>0.1.1</version>
  <description>Constraint-based IK solver.  Good for high-DOF robots or underconstrained tasks.</description>

  <author email="clewis@swri.org">Chris Lewis</author>
  <author email="jzoss@swri.org">Jeremy Zoss</author>
  <author email="dpsolomon@gmail.com">Dan Solomon</author>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <maintainer email="jzoss@swri.org">Jeremy Zoss, SwRI</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/constrained_ik</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>

  <depend>boost</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf_conversions</depend>
  <depend>pluginlib</depend>
  <depend>eigen_conversions</depend>
  <depend>cmake_modules</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <moveit_core plugin="${prefix}/constrained_ik_plugin.xml"/>
      <moveit_core plugin="${prefix}/constrained_ik_planner_plugin_description.xml"/>
      <constrained_ik plugin="${prefix}/constrained_ik_constraint_plugin_description.xml"/>
      <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
