<?xml version="1.0"?>
<package format="2">
  <name>industrial_collision_detection</name>
  <version>0.1.1</version>
  <description>The industrial_collision_detection package</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>

  <author email="levi.armstrong@swri.org"> Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>cmake_modules</depend>
  <depend>pluginlib</depend>
  <depend>libfcl-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <moveit_core plugin="${prefix}/industrial_collision_detection_plugin_description.xml"/>
  </export>
</package>
