<package>
  <name>industrial_moveit</name>
  <version>0.1.1</version>
  <description>ROS Industrial MoveIt packages.</description>
  <author email="jz__s@swri.org">Jeremy Zoss</author>
  <author email="dps____on@gmail.com">Dan Solomon</author>
  <maintainer email="jzoss@swri.org">Jeremy Zoss</maintainer>
  <maintainer email="dpsolomon@gmail.com">Dan Solomon</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/industrial_moveit</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_moveit/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>constrained_ik</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
