<?xml version="1.0"?>
<package format="2">
  <name>industrial_moveit_benchmarking</name>
  <version>0.1.1</version>
  <description>This package contains tools used to benchmark both constrianed_ik and stomp.</description>

  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author email="levi.armstrong@gmail.com"> Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>stomp_moveit</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>constrained_ik</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
