<?xml version="1.0"?>
<package format="2">
  <name>industrial_moveit_test_support</name>
  <version>0.1.1</version>
  <description>The industrial_moveit_test_support package</description>
  <maintainer email="jnicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>
  <author email="jnicho@swri.org">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
